--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     outline: 0;
-    font-family: cursive;
+    font-family: 'Open Sans', sans-serif;
 }
 body{
     height: 100vh;
