--- a/css/quiz.css
+++ b/css/quiz.css
@@ -11,6 +11,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     color: white;
+    text-transform: capitalize;
 }
 .quiz_box{
     position: absolute;
