--- a/css/hasil.css
+++ b/css/hasil.css
@@ -17,6 +17,7 @@ body{
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
+    margin: 5px;
 }
 .result {
     width: 400px;
@@ -52,3 +53,19 @@ body{
     color: #fff;
     cursor: pointer;
 }
+@media only screen and (max-width: 600px) {
+    .result {
+      font-size: x-small;
+    }
+    .btn {
+        padding: 4px 8px;
+        text-transform: capitalize;
+        background-color: rgb(0, 110, 255);
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+    }
+
+}
+  
