--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,31 @@ input[type=radio]{
     height: 470px;
     font-size: large;
 }
+@media only screen and (max-width: 600px) {
+    body {
+        line-height: 30px;
+    }
+    .panduan {
+        padding: 20px 25px;
+        width: 85%;
+        font-size: small;
+    }
+    .level {
+        padding: 20px 25px;
+        width: 85%;
+        font-size: 18px;
+    }
+    .exit, .next, .next_btn {
+        padding: 4px 8px;
+        margin-right: 5px;
+        text-transform: capitalize;
+        background-color: rgb(0, 110, 255);
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+    }
+    input[type=radio]{
+        margin-right: 5px;
+    }
+}
